--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Redirect to GitHub Pages
+name: Deploy to GitHub Pages
 
 on:
   push:
@@ -21,50 +21,24 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - name: Create redirect page
-        run: |
-          mkdir -p build
-          cat > build/index.html << 'EOF'
-          <!DOCTYPE html>
-          <html>
-          <head>
-            <meta charset="utf-8">
-            <title>Redirecting to Situation Monitor...</title>
-            <meta http-equiv="refresh" content="0; url=https://hipcityreg-situation-monitor.vercel.app">
-            <link rel="canonical" href="https://hipcityreg-situation-monitor.vercel.app">
-            <style>
-              body {
-                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                height: 100vh;
-                margin: 0;
-                background: #0a0a0a;
-                color: #888;
-              }
-              a { color: #4ade80; }
-            </style>
-          </head>
-          <body>
-            <p>Redirecting to <a href="https://hipcityreg-situation-monitor.vercel.app">hipcityreg-situation-monitor.vercel.app</a>...</p>
-          </body>
-          </html>
-          EOF
-          cat > build/404.html << 'EOF'
-          <!DOCTYPE html>
-          <html>
-          <head>
-            <meta charset="utf-8">
-            <title>Redirecting to Situation Monitor...</title>
-            <meta http-equiv="refresh" content="0; url=https://hipcityreg-situation-monitor.vercel.app">
-            <link rel="canonical" href="https://hipcityreg-situation-monitor.vercel.app">
-          </head>
-          <body>
-            <p>Redirecting to <a href="https://hipcityreg-situation-monitor.vercel.app">hipcityreg-situation-monitor.vercel.app</a>...</p>
-          </body>
-          </html>
-          EOF
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build site
+        env:
+          BASE_PATH: '/situation-monitor'
+        run: npm run build
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
